--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 	color-scheme: light dark;
 	color: rgba(255, 255, 255, 0.87);
-	background-color: #4793af;
+	background-color: #dff6ff;
 
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
@@ -95,6 +95,7 @@ body {
 ._buttons:hover {
 	scale: 1.1;
 	transition: 0.7s ease-in-out;
+	cursor: pointer;
 }
 ._actions:hover {
 	scale: 1.8;
