--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@
   }
   
 .album_image::-webkit-scrollbar-track {
-	box-shadow: inset 0 0 5px grey; 
+	box-shadow: inset 0 0 5px rgba(128, 128, 128, 0); 
 	border-radius: 10px;
   }
    
@@ -52,7 +52,7 @@ border-radius: 10px;
   }
   
 .testimony::-webkit-scrollbar-track {
-	box-shadow: inset 0 0 5px grey; 
+	box-shadow: inset 0 0 5px rgba(128, 128, 128, 0); 
 	border-radius: 10px;
   }
    
@@ -70,7 +70,7 @@ border-radius: 10px;
   }
   
 .single_paragraph::-webkit-scrollbar-track {
-	box-shadow: inset 0 0 5px grey; 
+	box-shadow: inset 0 0 5px rgba(128, 128, 128, 0); 
 	border-radius: 10px;
   }
    
